index: Make all links target="_blank"
Let's consider index as a hub that we don't want to easily lose our
place in.

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <div class="row text-center">
           <div class="col-md-6">
             <span class="fa-stack fa-4x">
-              <a href="http://www.github.com/Khouderchah-Alex">
+              <a href="http://www.github.com/Khouderchah-Alex" target="_blank">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
               </a>
@@ -390,8 +390,8 @@
                     </div>
                     <div class="col-sm-6">
                       <ul>
-                        <li><a href="articles/ai/amlang_0.html">Part 0: Background</a></li>
-                        <li><a href="articles/ai/amlang_1.html">Part 1: Environment</a></li>
+                        <li><a href="articles/ai/amlang_0.html" target="_blank">Part 0: Background</a></li>
+                        <li><a href="articles/ai/amlang_1.html" target="_blank">Part 1: Environment</a></li>
                       </ul>
                       <br>
                     </div>
@@ -430,7 +430,7 @@
                   <h2>ChromiumOS</h2>
                   <p class="item-intro text-muted">Open-source contributions to ChromeOS</p>
                   <img class="img-responsive img-centered" src="img/portfolio/cros.png" alt="">
-                  <p>List of public contributions to ChromeOS (ChromiumOS) <a href="https://chromium-review.googlesource.com/q/owner:akhouderchah%2540chromium.org,75"><b>here</b></a>.</p>
+                  <p>List of public contributions to ChromeOS (ChromiumOS) <a href="https://chromium-review.googlesource.com/q/owner:akhouderchah%2540chromium.org,75"  target="_blank"><b>here</b></a>.</p>
                   <p>Selected commits:</p>
                   <div class="row modal-list">
                     <div class="col-sm-2">
@@ -438,32 +438,32 @@
                     <div class="col-sm-8">
                       <p style="text-align: left; margin-bottom: 2px"><b>Features</b></p>
                       <ul>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1590183">shill: connection: Use per-device tables for all connections</a></li>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1829659">shill: service: Use Disconnecting state</a></li>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1887726">shill: external_task: Allow ExternalTask destruction in death callback</a></li>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2008092">shill: device_info: Unify Device destruction for physical technologies</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1590183" target="_blank">shill: connection: Use per-device tables for all connections</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1829659" target="_blank">shill: service: Use Disconnecting state</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1887726" target="_blank">shill: external_task: Allow ExternalTask destruction in death callback</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2008092" target="_blank">shill: device_info: Unify Device destruction for physical technologies</a></li>
                       </ul>
 
                       <p style="text-align: left; margin-bottom: 2px"><b>Security Fixes</b></p>
                       <ul>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2180967">vpn: Sanitize xl2tpd configuration string values</a></li>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1495422">libbrillo: http: Use chromeos CA certs rather than NSS store</a></li>
-                        <li><a href="https://chromium-review.googlesource.com/c/aosp/platform/system/update_engine/+/1553463">update_engine: Only use CAPATH for certificate verification</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2180967" target="_blank">vpn: Sanitize xl2tpd configuration string values</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1495422" target="_blank">libbrillo: http: Use chromeos CA certs rather than NSS store</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/aosp/platform/system/update_engine/+/1553463" target="_blank">update_engine: Only use CAPATH for certificate verification</a></li>
                       </ul>
 
                       <p style="text-align: left; margin-bottom: 2px"><b>Documentation</b></p>
                       <ul>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1797272">shill: Add top-level README</a></li>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2070321">shill: doc: Document VPN stack</a></li>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1436376">hermes: Add background and design to README.md</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1797272" target="_blank">shill: Add top-level README</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2070321" target="_blank">shill: doc: Document VPN stack</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1436376" target="_blank">hermes: Add background and design to README.md</a></li>
                       </ul>
 
                       <p style="text-align: left; margin-bottom: 2px"><b>Code Quality Improvements</b></p>
                       <ul>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1698497">shill: Clean up RoutingPolicyEntry interface</a></li>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1768862">shill: Add mockable keyword</a></li>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2106358">shill: key_value_store: Templatize Contains* methods</a></li>
-                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1904249">shill: Centralize recognition of "arcbr0" in DeviceInfo</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1698497" target="_blank">shill: Clean up RoutingPolicyEntry interface</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1768862" target="_blank">shill: Add mockable keyword</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/2106358" target="_blank">shill: key_value_store: Templatize Contains* methods</a></li>
+                        <li><a href="https://chromium-review.googlesource.com/c/chromiumos/platform2/+/1904249" target="_blank">shill: Centralize recognition of "arcbr0" in DeviceInfo</a></li>
                       </ul>
                       <br>
                     </div>
@@ -648,7 +648,7 @@
                   <p class="item-intro text-muted">Mods&#8213;levels, missions, and guns&#8213;for Borderlands 1 (developed during ages 13-15)</p>
                   <img class="img-responsive img-centered" src="img/portfolio/borderlands.png" alt="">
                   <ul class="list-inline social-buttons">
-                    <li><a href="mods.html"><i class="fa fa-external-link"></i></a>
+                    <li><a href="mods.html" target="_blank"><i class="fa fa-external-link"></i></a>
                     </li>
                   </ul>
                   <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
