index: red -> purple

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                     <h4 class="subheading"></h4>
                   </div>
                   <div class="timeline-body">
-                    <p class="text-muted"><br>Technically, my current focus lies primarily with Amlang (see below) and red teaming. However, I am always looking for opportunities broadly to contribute to compelling projects, work with others as a cohesive and mutually-mentoring team, and improve myself.</p>
+                    <p class="text-muted"><br>Technically, my current focus lies primarily with Amlang (see below) and purple teaming. However, I am always looking for opportunities broadly to contribute to compelling projects, work with others as a cohesive and mutually-mentoring team, and improve myself.</p>
                   </div>
                 </div>
               </li>
@@ -325,7 +325,7 @@
             </span>
             <h4 class="service-heading">Email</h4>
             <p class="text-muted">
-              I am always on the lookout for new and interesting opportunities, particularly regarding Amlang and red teaming. Feel free to contact me at alex.khouderchah@gmail.com.</p>
+              I am always on the lookout for new and interesting opportunities, particularly regarding Amlang and purple teaming. Feel free to contact me at alex.khouderchah@gmail.com.</p>
           </div>
         </div>
       </div>
