img: Use compressed webp over gifs for w3wm
Still could use a reduction in size, but much better than before.

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <div class="w3wm-third"></div>
+              <img src="img/portfolio/w3wm_Preview.webp" style="height: 250px; width: 350px">
             </a>
             <div class="portfolio-caption">
               <h4>Tiling Desktop Manager for Windows</h4>
@@ -496,7 +496,7 @@
                 <div class="modal-body">
                   <h2>w3wm</h2>
                   <p class="item-intro text-muted">Tiling desktop manager for Windows</p>
-                  <img class="img-responsive img-centered" src="img/portfolio/w3wm_Intro.gif" alt="">
+                  <img class="img-responsive img-centered" src="img/portfolio/w3wm_Intro.webp" alt="">
                   <p>w3wm is a project dedicated to providing Windows 7, 8, and 10 with an experience similar to that of using i3 on Linux. Windows are automatically tiled, and users can use the keyboard to navigate between, move, resize, open, and close windows. Built from the ground up with native support for multi-monitor setups and DPI-aware processes, w3wm is a desktop manager fit for the modern user who potentially has multiple monitors of high resolution.</p>
                   <p style="margin-bottom: 10px">View the source code:</p>
                   <ul class="list-inline social-buttons">
