portfolio: Fix bottom row alignment
Also massively shrinks the size of the w3wm preview.

--- a/index.html
+++ b/index.html
@@ -240,10 +240,10 @@
                   <i class="fa fa-plus fa-3x"></i>
                 </div>
               </div>
-              <img src="img/portfolio/w3wm_Preview.webp" style="height: 250px; width: 350px">
+              <img src="img/portfolio/w3wm_Preview.webp" style="height: 270px">
             </a>
             <div class="portfolio-caption">
-              <h4>Tiling Desktop Manager for Windows</h4>
+              <h4>Tiling Window Manager, Win 7+</h4>
               <p class="text-muted">Windows Programming</p>
             </div>
           </div>
