portfolio: amlang: Mention context of data

--- a/index.html
+++ b/index.html
@@ -404,7 +404,8 @@
                     system in Rust
                     are <a href="https://en.wikipedia.org/wiki/Reification_(computer_science)">reified</a>
                     in the Environment, allowing Amlang to modify and extend the
-                    system it exists on top of.
+                    system it exists on top of. A key principle of Amlang is the
+                    ability to both collapse and reproduce the context of data.
                   </p>
                   <p>This series describes the project:</p>
                   <div class="row modal-list">
