portfolio: amlang: Mention context of data in first paragraph

--- a/index.html
+++ b/index.html
@@ -387,7 +387,9 @@
                     Amlang is a language system that reverses the bifurcation
                     into programming language and database, permits
                     self-leverage in both Amlang and the underlying Rust, and
-                    maintains operational agnosticism.
+                    maintains operational agnosticism. A key principle of Amlang
+                    is the ability to both collapse and reproduce the context of
+                    data.
                   </p>
                   <p>
                     A 10,000 foot view of Amlang is as a graph database
@@ -404,8 +406,7 @@
                     system in Rust
                     are <a href="https://en.wikipedia.org/wiki/Reification_(computer_science)">reified</a>
                     in the Environment, allowing Amlang to modify and extend the
-                    system it exists on top of. A key principle of Amlang is the
-                    ability to both collapse and reproduce the context of data.
+                    system it exists on top of.
                   </p>
                   <p>This series describes the project:</p>
                   <div class="row modal-list">
