Update links after username change

--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@
         <div class="row text-center">
           <div class="col-md-6">
             <span class="fa-stack fa-4x">
-              <a href="http://www.github.com/Khouderchah-Alex" target="_blank">
+              <a href="http://www.github.com/akhouderchah" target="_blank">
                 <i class="fa fa-circle fa-stack-2x text-primary"></i>
                 <i class="fa fa-github fa-stack-1x fa-inverse"></i>
               </a>
@@ -341,7 +341,7 @@
           <div class="col-md-8">
             <!--
                 <ul class="list-inline social-buttons">
-                  <li><a href="http://www.github.com/Khouderchah-Alex"><i class="fa fa-github"></i></a>
+                  <li><a href="http://www.github.com/akhouderchah"><i class="fa fa-github"></i></a>
                   </li>
                   <li><a href="#"><i class="fa fa-facebook"></i></a>
                   </li>
@@ -425,7 +425,7 @@
 
                   <p style="margin-bottom: 10px">View the source code:</p>
                   <ul class="list-inline social-buttons">
-                    <li><a href="http://www.github.com/Khouderchah-Alex/amlang" target="_blank"><i class="fa fa-github"></i></a>
+                    <li><a href="http://www.github.com/akhouderchah/amlang" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                   </ul>
                   <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -524,7 +524,7 @@
                   <p>w3wm is a project dedicated to providing Windows 7, 8, and 10 with an experience similar to that of using i3 on Linux. Windows are automatically tiled, and users can use the keyboard to navigate between, move, resize, open, and close windows. Built from the ground up with native support for multi-monitor setups and DPI-aware processes, w3wm is a desktop manager fit for the modern user who potentially has multiple monitors of high resolution.</p>
                   <p style="margin-bottom: 10px">View the source code:</p>
                   <ul class="list-inline social-buttons">
-                    <li><a href="http://www.github.com/Khouderchah-Alex/w3wm" target="_blank"><i class="fa fa-github"></i></a>
+                    <li><a href="http://www.github.com/akhouderchah/w3wm" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                   </ul>
                   <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -581,7 +581,7 @@
                   </p>
                   <p style="margin-bottom: 10px">View the source code:</p>
                   <ul class="list-inline social-buttons">
-                    <li><a href="http://www.github.com/Khouderchah-Alex/tetrad-engine" target="_blank"><i class="fa fa-github"></i></a>
+                    <li><a href="http://www.github.com/akhouderchah/tetrad-engine" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                   </ul>
                   <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
@@ -641,7 +641,7 @@
                   <img class="img-responsive img-centered" src="img/portfolio/startup-framework-preview.png" alt="">
                   <p>This is an implementation of a library that provides an interface similar to that of the Berkeley sockets API, with the library itself providing reliable data transfer over UDP. While there are certainly similarities between the implemented protocol and TCP, there are a number of differences (for example, TCP uses cumulative ACKs, whereas the implemented protocol uses ACKs in a manner similar to that of Selective Repeat).</p>
                   <ul class="list-inline social-buttons">
-                    <li><a href="http://www.github.com/Khouderchah-Alex/libRDT" target="_blank"><i class="fa fa-github"></i></a>
+                    <li><a href="http://www.github.com/akhouderchah/libRDT" target="_blank"><i class="fa fa-github"></i></a>
                     </li>
                   </ul>
                   <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
